# partenon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARTICLE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  MISSING_IMPLEMENTATION.md  NOTICE.md  README.md  SECURITY.md  SPEC.md  TODOS.md  distribution.yaml  docker-compose.override.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/scripts/: secret_scan.py
.github/workflows/: ci.yml  release.yml
.kimi-code/memory/: LOOP_STATE.md  MEMORY.md  PLAN.md  PROGRESS.md  SESSION_LOG.md  SESSION_ROUTER.md
.kimi/memory/: MEMORY.md  PLAN.md  PROGRESS.md  SESSION_ROUTER.md
Idea de web/: info.md  plan.md
Idea de web/hermes-site/: index.html
Idea de web/research/: archetypes.md  impact_stats.md  mcp_architecture.md  nous_aesthetic.md  nvidia_tech.md  stripe_skills.md
Kimi_Agent_10 Storytelling Web Sites/: info.md  investigacion_marca_tecnica.md  investigacion_narrativa_inmersiva.md  plan.md
Kimi_Agent_10 Storytelling Web Sites/app/: index.html  package-lock.json  package.json  tailwind.config.js
audits/: AUDIT_INDEX.md  audit_cross_cutting.md  audit_web_developers.md  audit_web_heroes.md  audit_web_index.md  release_readiness_docker_and_ci_verification.md  release_readiness_documentation_and_consistency.md  release_readiness_git_and_version_hygiene.md  release_readiness_security_and_secrets_audit.md  release_readiness_tests_and_lint_verification.md
config/: hermes_gateway.yaml
dashboard/: Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts
data/: cron.json  missions.json  partenon-finance-template.xlsx  sample_expenses.xlsx  sample_expenses_report.json  sample_gastos.xlsx  sample_gastos_report.json  tasks.json
docs/: API.md  CAPABILITIES.md  DEPLOYMENT.md  ENTREPRENEUR_PLAYBOOK.md  FAQ.md  GATEWAY_SETUP.md  HERO_GUIDE.md  PARTENON_GUIDE.html  QUICKSTART.md  RELEASE.md  SECURITY.md  architecture.md  for-developers.md  for-founders.md
docs/assets/: architecture-diagram.mmd  hero-matrix.md
examples/: README.md  api-server-stub.py  hermes-cli-stub.py  mcp-client-example.py
gbrain/: .env.example  README.md  server.py  tools.py
mcp_servers/_shared/: live_mode.py
mcp_servers/comms/: server.py
mcp_servers/finance/: server.py
mcp_servers/google_workspace/: client.py  server.py
mcp_servers/memory/: README.md  server.py  tools.py
mcp_servers/notifications/: server.py  slack.py
mcp_servers/ops/: server.py
mcp_servers/payments/: server.py  webhook.py
mcp_servers/relations/: server.py
mcp_servers/security/: key_manager.py  server.py
partenon-core/: README.md  SKILL.md
partenon-core/data/: initial_tasks.json
partenon-core/templates/: onboarding_questions.md
partenon-core/tools/: config_loader.py  eval_loop.py  onboarding_engine.py  onboarding_flow.py  router.py  workflow_engine.py
partenon_api/: __init__.py  auth.py  config.py  constants.py  events.py  main.py  mcp_client.py  models.py  observability.py  store.py  utils.py
partenon_api/routers/: auth.py  cron.py  events.py  gateway.py  heroes.py  integrations.py  missions.py  stream.py
partenon_core/: README.md  SKILL.md
partenon_core/data/: initial_tasks.json
partenon_core/tools/: eval_loop.py  intent_router.py  onboarding_engine.py  onboarding_flow.py  router.py  workflow_engine.py
scripts/: bump_version.py  capture.py  demo_scribe.py  demo_tesorero.py  setup_hermes.py  validate_profiles.py
skills/partenon-core/: SKILL.md
skills/partenon-judge/: SKILL.md
skills/partenon-workflows/: SKILL.md
templates/google-sheet-base/: finance_sheet.py
tests/: conftest.py  test_api_auth.py  test_api_cron.py  test_api_events.py  test_api_gateway.py  test_api_integrations.py  test_api_missions.py  test_config.py  test_gateway_guard.py  test_gateway_onboarding.py  test_gateway_parse_command.py  test_gateway_route_attachment.py  test_google_workspace_adapter.py  test_guardian_key_manager.py  test_handoffs.py  test_hermes_manifests.py  test_mcp_client.py  test_mcp_servers.py  test_observability.py  test_onboarding_engine.py  test_scribe_demo.py  test_slack_adapter.py  test_store.py  test_stripe_live.py  test_stripe_webhook.py
video-v2/: ELEVENLABS_SCRIPT.md  ELEVENLABS_SETTINGS.md  EPIDEMIC_SOUND_PROMPT.md  OMNI_CLIP_CHEATSHEET.md  OMNI_PROMPTS.txt  STORYBOARD.md  STORYBOARD_VIDEOS.md  assemble.py  scenes.json
video-v2/assets/: README.md  concat-final.txt
video/partenon-hackathon/: .gitignore  plan.md  script.py  voiceover.txt
web/: developers.html  heroes.html  index.html  workshop.html
workshop/: AGENDA.md  HANDOUT.md  README.md  SLIDES.md
workshop/checklists/: PRODUCTION_READINESS.md  business-type-checklists.md  onboarding-checklist.md  production-readiness.md
workshop/companies/: agency--envision-creative.md  agency--ladder.md  coffee-shop--coffee-by-design.md  coffee-shop--flora-coffee.md  coffee-shop--four-barrel-coffee.md  coffee-shop--joe-coffee-company.md  coffee-shop--oblique-coffee-roasters.md  coffee-shop--philz-coffee.md  coffee-shop--portland-coffee-roasters.md  construction--dm-construction.md  construction-company--boreal-contractors.md  construction-company--flintrock-operating.md  construction-company--greenberg-construction.md  construction-company--marsh-bell-construction.md  construction-company--pond-roofing.md  construction-company--spawglass.md  marketing-agency--clickers-2-clients.md  marketing-agency--duct-tape-marketing.md  marketing-agency--mack-media-group.md  marketing-agency--searchbloom.md  marketing-agency--single-grain.md  retail--brookline-booksmith.md  retail--greenlight-bookstore.md  retail-store--brazos-bookstore.md  retail-store--k-and-l-wine-merchants.md  retail-store--kick-pleat.md  retail-store--little-shop-of-stories.md  retail-store--tracksmith.md  saas--buffer.md  saas--plausible-analytics.md  saas--tally.md  saas-startup--buffer.md  saas-startup--chatbase.md  saas-startup--outseta.md  saas-startup--wp-umbrella.md
workshop/guides/: HERMES_ONBOARDING.md  facilitator-guide.md  hero-selection-guide.md
(+265 files in other folders)
